--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ locale                   : "en-US"
 title                    : "나의 블로그"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : ""
+name                     : "tobestyear"
 description              : "An amazing website."
 url                      : "https://tobestyear.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
