--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ locale                   : "en-US"
 title                    : "나의 블로그"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "tobestyear"
+name                     : ""
 description              : "An amazing website."
 url                      : "https://tobestyear.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
